--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -3508,6 +3508,374 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1309</th>\n",
+       "      <td>2017-07-22</td>\n",
+       "      <td>103</td>\n",
+       "      <td>90</td>\n",
+       "      <td>77</td>\n",
+       "      <td>74</td>\n",
+       "      <td>68</td>\n",
+       "      <td>61</td>\n",
+       "      <td>88</td>\n",
+       "      <td>58</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>29.81</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310</th>\n",
+       "      <td>2017-07-23</td>\n",
+       "      <td>103</td>\n",
+       "      <td>90</td>\n",
+       "      <td>77</td>\n",
+       "      <td>74</td>\n",
+       "      <td>71</td>\n",
+       "      <td>66</td>\n",
+       "      <td>85</td>\n",
+       "      <td>58</td>\n",
+       "      <td>31</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>29.82</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1311</th>\n",
+       "      <td>2017-07-24</td>\n",
+       "      <td>102</td>\n",
+       "      <td>89</td>\n",
+       "      <td>76</td>\n",
+       "      <td>75</td>\n",
+       "      <td>71</td>\n",
+       "      <td>56</td>\n",
+       "      <td>91</td>\n",
+       "      <td>60</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>29.89</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1312</th>\n",
+       "      <td>2017-07-25</td>\n",
+       "      <td>103</td>\n",
+       "      <td>91</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>71</td>\n",
+       "      <td>63</td>\n",
+       "      <td>91</td>\n",
+       "      <td>61</td>\n",
+       "      <td>31</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.03</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1313</th>\n",
+       "      <td>2017-07-26</td>\n",
+       "      <td>103</td>\n",
+       "      <td>91</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>61</td>\n",
+       "      <td>91</td>\n",
+       "      <td>58</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.03</td>\n",
+       "      <td>29.93</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>27</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1314</th>\n",
+       "      <td>2017-07-27</td>\n",
+       "      <td>103</td>\n",
+       "      <td>89</td>\n",
+       "      <td>75</td>\n",
+       "      <td>71</td>\n",
+       "      <td>67</td>\n",
+       "      <td>61</td>\n",
+       "      <td>82</td>\n",
+       "      <td>54</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.97</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1315</th>\n",
+       "      <td>2017-07-28</td>\n",
+       "      <td>105</td>\n",
+       "      <td>91</td>\n",
+       "      <td>76</td>\n",
+       "      <td>71</td>\n",
+       "      <td>64</td>\n",
+       "      <td>55</td>\n",
+       "      <td>87</td>\n",
+       "      <td>54</td>\n",
+       "      <td>20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>29.81</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316</th>\n",
+       "      <td>2017-07-29</td>\n",
+       "      <td>107</td>\n",
+       "      <td>92</td>\n",
+       "      <td>77</td>\n",
+       "      <td>72</td>\n",
+       "      <td>64</td>\n",
+       "      <td>55</td>\n",
+       "      <td>82</td>\n",
+       "      <td>51</td>\n",
+       "      <td>19</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.86</td>\n",
+       "      <td>29.79</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1317</th>\n",
+       "      <td>2017-07-30</td>\n",
+       "      <td>106</td>\n",
+       "      <td>93</td>\n",
+       "      <td>79</td>\n",
+       "      <td>70</td>\n",
+       "      <td>68</td>\n",
+       "      <td>63</td>\n",
+       "      <td>69</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1318</th>\n",
+       "      <td>2017-07-31</td>\n",
+       "      <td>99</td>\n",
+       "      <td>88</td>\n",
+       "      <td>77</td>\n",
+       "      <td>66</td>\n",
+       "      <td>61</td>\n",
+       "      <td>54</td>\n",
+       "      <td>64</td>\n",
+       "      <td>43</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.97</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "1309  2017-07-22        103        90        77            74           68   \n",
+       "1310  2017-07-23        103        90        77            74           71   \n",
+       "1311  2017-07-24        102        89        76            75           71   \n",
+       "1312  2017-07-25        103        91        78            75           71   \n",
+       "1313  2017-07-26        103        91        78            75           70   \n",
+       "1314  2017-07-27        103        89        75            71           67   \n",
+       "1315  2017-07-28        105        91        76            71           64   \n",
+       "1316  2017-07-29        107        92        77            72           64   \n",
+       "1317  2017-07-30        106        93        79            70           68   \n",
+       "1318  2017-07-31         99        88        77            66           61   \n",
+       "\n",
+       "     DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  \\\n",
+       "1309           61                  88                 58                 27   \n",
+       "1310           66                  85                 58                 31   \n",
+       "1311           56                  91                 60                 29   \n",
+       "1312           63                  91                 61                 31   \n",
+       "1313           61                  91                 58                 25   \n",
+       "1314           61                  82                 54                 25   \n",
+       "1315           55                  87                 54                 20   \n",
+       "1316           55                  82                 51                 19   \n",
+       "1317           63                  69                 48                 27   \n",
+       "1318           54                  64                 43                 22   \n",
+       "\n",
+       "      ... SeaLevelPressureAvgInches SeaLevelPressureLowInches  \\\n",
+       "1309  ...                      29.9                     29.81   \n",
+       "1310  ...                     29.88                     29.82   \n",
+       "1311  ...                     29.95                     29.89   \n",
+       "1312  ...                     30.03                     29.95   \n",
+       "1313  ...                     30.03                     29.93   \n",
+       "1314  ...                     29.97                     29.88   \n",
+       "1315  ...                      29.9                     29.81   \n",
+       "1316  ...                     29.86                     29.79   \n",
+       "1317  ...                     29.91                     29.87   \n",
+       "1318  ...                     29.97                     29.91   \n",
+       "\n",
+       "     VisibilityHighMiles VisibilityAvgMiles VisibilityLowMiles WindHighMPH  \\\n",
+       "1309                  10                 10                 10          13   \n",
+       "1310                  10                 10                  2          13   \n",
+       "1311                  10                 10                  9          13   \n",
+       "1312                  10                 10                  9          15   \n",
+       "1313                  10                 10                 10          15   \n",
+       "1314                  10                 10                 10          12   \n",
+       "1315                  10                 10                 10          14   \n",
+       "1316                  10                 10                 10          12   \n",
+       "1317                  10                 10                 10          13   \n",
+       "1318                  10                 10                 10          12   \n",
+       "\n",
+       "     WindAvgMPH WindGustMPH PrecipitationSumInches               Events  \n",
+       "1309          6          22                      0                       \n",
+       "1310          4          24                   0.04  Rain , Thunderstorm  \n",
+       "1311          3          19                   0.01  Rain , Thunderstorm  \n",
+       "1312          7          24                      0                       \n",
+       "1313          6          27                      T                       \n",
+       "1314          5          21                      0                       \n",
+       "1315          5          20                      0                       \n",
+       "1316          4          17                      0                       \n",
+       "1317          4          20                      0                       \n",
+       "1318          4          20                      0                       \n",
+       "\n",
+       "[10 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
