--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -3979,6 +3979,434 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2        True\n",
+       "3       False\n",
+       "4       False\n",
+       "        ...  \n",
+       "1314    False\n",
+       "1315    False\n",
+       "1316    False\n",
+       "1317     True\n",
+       "1318     True\n",
+       "Name: HumidityHighPercent, Length: 1319, dtype: bool"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.HumidityHighPercent <= '80'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-12-23</td>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27</td>\n",
+       "      <td>23</td>\n",
+       "      <td>76</td>\n",
+       "      <td>52</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.49</td>\n",
+       "      <td>30.41</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2013-12-26</td>\n",
+       "      <td>57</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>36</td>\n",
+       "      <td>33</td>\n",
+       "      <td>79</td>\n",
+       "      <td>63</td>\n",
+       "      <td>47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>30.34</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2013-12-30</td>\n",
+       "      <td>44</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>31</td>\n",
+       "      <td>26</td>\n",
+       "      <td>21</td>\n",
+       "      <td>75</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.26</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2013-12-31</td>\n",
+       "      <td>55</td>\n",
+       "      <td>46</td>\n",
+       "      <td>36</td>\n",
+       "      <td>31</td>\n",
+       "      <td>28</td>\n",
+       "      <td>23</td>\n",
+       "      <td>76</td>\n",
+       "      <td>54</td>\n",
+       "      <td>32</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.39</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2014-01-03</td>\n",
+       "      <td>58</td>\n",
+       "      <td>43</td>\n",
+       "      <td>28</td>\n",
+       "      <td>37</td>\n",
+       "      <td>22</td>\n",
+       "      <td>18</td>\n",
+       "      <td>75</td>\n",
+       "      <td>49</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.35</td>\n",
+       "      <td>30.14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1284</th>\n",
+       "      <td>2017-06-27</td>\n",
+       "      <td>91</td>\n",
+       "      <td>81</td>\n",
+       "      <td>71</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>67</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>50</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1302</th>\n",
+       "      <td>2017-07-15</td>\n",
+       "      <td>103</td>\n",
+       "      <td>87</td>\n",
+       "      <td>71</td>\n",
+       "      <td>73</td>\n",
+       "      <td>70</td>\n",
+       "      <td>63</td>\n",
+       "      <td>100</td>\n",
+       "      <td>65</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.01</td>\n",
+       "      <td>29.94</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1303</th>\n",
+       "      <td>2017-07-16</td>\n",
+       "      <td>99</td>\n",
+       "      <td>84</td>\n",
+       "      <td>68</td>\n",
+       "      <td>71</td>\n",
+       "      <td>69</td>\n",
+       "      <td>65</td>\n",
+       "      <td>100</td>\n",
+       "      <td>67</td>\n",
+       "      <td>33</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.93</td>\n",
+       "      <td>29.84</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1317</th>\n",
+       "      <td>2017-07-30</td>\n",
+       "      <td>106</td>\n",
+       "      <td>93</td>\n",
+       "      <td>79</td>\n",
+       "      <td>70</td>\n",
+       "      <td>68</td>\n",
+       "      <td>63</td>\n",
+       "      <td>69</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1318</th>\n",
+       "      <td>2017-07-31</td>\n",
+       "      <td>99</td>\n",
+       "      <td>88</td>\n",
+       "      <td>77</td>\n",
+       "      <td>66</td>\n",
+       "      <td>61</td>\n",
+       "      <td>54</td>\n",
+       "      <td>64</td>\n",
+       "      <td>43</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.97</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>456 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "2     2013-12-23         58        45        32            31           27   \n",
+       "5     2013-12-26         57        48        39            39           36   \n",
+       "9     2013-12-30         44        40        35            31           26   \n",
+       "10    2013-12-31         55        46        36            31           28   \n",
+       "13    2014-01-03         58        43        28            37           22   \n",
+       "...          ...        ...       ...       ...           ...          ...   \n",
+       "1284  2017-06-27         91        81        71            74           72   \n",
+       "1302  2017-07-15        103        87        71            73           70   \n",
+       "1303  2017-07-16         99        84        68            71           69   \n",
+       "1317  2017-07-30        106        93        79            70           68   \n",
+       "1318  2017-07-31         99        88        77            66           61   \n",
+       "\n",
+       "     DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  \\\n",
+       "2              23                  76                 52                 27   \n",
+       "5              33                  79                 63                 47   \n",
+       "9              21                  75                 60                 45   \n",
+       "10             23                  76                 54                 32   \n",
+       "13             18                  75                 49                 22   \n",
+       "...           ...                 ...                ...                ...   \n",
+       "1284           67                 100                 75                 50   \n",
+       "1302           63                 100                 65                 29   \n",
+       "1303           65                 100                 67                 33   \n",
+       "1317           63                  69                 48                 27   \n",
+       "1318           54                  64                 43                 22   \n",
+       "\n",
+       "      ... SeaLevelPressureAvgInches SeaLevelPressureLowInches  \\\n",
+       "2     ...                     30.49                     30.41   \n",
+       "5     ...                      30.4                     30.34   \n",
+       "9     ...                     30.33                     30.26   \n",
+       "10    ...                     30.39                     30.27   \n",
+       "13    ...                     30.35                     30.14   \n",
+       "...   ...                       ...                       ...   \n",
+       "1284  ...                        30                      29.9   \n",
+       "1302  ...                     30.01                     29.94   \n",
+       "1303  ...                     29.93                     29.84   \n",
+       "1317  ...                     29.91                     29.87   \n",
+       "1318  ...                     29.97                     29.91   \n",
+       "\n",
+       "     VisibilityHighMiles VisibilityAvgMiles VisibilityLowMiles WindHighMPH  \\\n",
+       "2                     10                 10                 10           8   \n",
+       "5                     10                  9                  7          12   \n",
+       "9                     10                 10                 10          13   \n",
+       "10                    10                 10                 10           8   \n",
+       "13                    10                 10                 10          14   \n",
+       "...                  ...                ...                ...         ...   \n",
+       "1284                  10                  7                  2          20   \n",
+       "1302                  10                  9                  2          23   \n",
+       "1303                  10                  9                  6          12   \n",
+       "1317                  10                 10                 10          13   \n",
+       "1318                  10                 10                 10          12   \n",
+       "\n",
+       "     WindAvgMPH WindGustMPH PrecipitationSumInches               Events  \n",
+       "2             3          12                      0                       \n",
+       "5             3          17                      0                       \n",
+       "9             5          21                      0                       \n",
+       "10            1          12                      0                       \n",
+       "13            4          21                      0                       \n",
+       "...         ...         ...                    ...                  ...  \n",
+       "1284          3          30                   0.01                 Rain  \n",
+       "1302          3          35                   0.16  Rain , Thunderstorm  \n",
+       "1303          3          24                      0                       \n",
+       "1317          4          20                      0                       \n",
+       "1318          4          20                      0                       \n",
+       "\n",
+       "[456 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.HumidityHighPercent <= '80']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
